z-index of navbar toggle on mobile fix

--- a/assets/gaya.css
+++ b/assets/gaya.css
@@ -22,7 +22,7 @@ img {
     padding-top: 20px !important;
     padding-bottom: 0 !important;
 }
-
+.navbar-toggler{z-index: 1;}
 .kelokanAtas {
     position: relative;
 }
